# xfce-gruv

./: .gitignore  Makefile.am  README.md  configure.ac  package-lock.json
common/: Makefile.am  index.theme
common/gtk-3.0/3.20/: assets.svg.backup  gtk-solid.css  gtk.css
common/gtk-3.0/3.20/sass/: _colors.scss
common/xfce4-terminal/: gruv.theme
common/xfwm4/: themerc
